chore: update to java 24 (#95)
CloudNet now relies on Java 24, so this module needs to be updated to
Java 24 as well.